--- a/_head.tex
+++ b/_head.tex
@@ -36,20 +36,20 @@
 
 
 % Two authors with the same address
-%\author{\Name{Paweł Ksieniewicz}
-%	\Email{pawel.ksieniewicz@pwr.edu.pl}\\
-%	\addr 
-%	Department of Systems and Computer Networks\\
-%	Faculty of Electronics\\
-%	Wrocław University of Science and Technology
-%}
-\author{\Name{--- ---}
-	\Email{---}\\
+\author{\Name{Paweł Ksieniewicz}
+	\Email{pawel.ksieniewicz@pwr.edu.pl}\\
 	\addr 
-	---\\
-	---\\
-	---
+	Department of Systems and Computer Networks\\
+	Faculty of Electronics\\
+	Wrocław University of Science and Technology
 }
+%\author{\Name{--- ---}
+%	\Email{---}\\
+%	\addr 
+%	---\\
+%	---\\
+%	---
+%}
 
 \editor{Editor's name}
 
